--- a/netlify.toml
+++ b/netlify.toml
@@ -1,22 +1,10 @@
 [build]
-  # If static export:
-  # command = "npm run build"
-  # publish = "out"
+  command = "npm run build"
+  publish = "out"
 
-  # If SSR with plugin:
-  # command = "npm run build"
-  # publish = ".next"
-
-# Serve .wasm with the correct type and cache strongly
+# Ensure correct MIME for .wasm
 [[headers]]
   for = "/ifc/*.wasm"
   [headers.values]
     Content-Type = "application/wasm"
     Cache-Control = "public, max-age=31536000, immutable"
-
-# If you added a SPA catch-all redirect earlier, make sure /ifc/* is NOT swallowed by it.
-# This rule is a safe no-op that protects the path from being rewritten.
-[[redirects]]
-  from = "/ifc/*"
-  to = "/ifc/:splat"
-  status = 200
