--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "bim-ifc-viewer",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    {
-      "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "postinstall": "node scripts/copy-wasm.js"
-      }
-    }
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "node scripts/copy-wasm.cjs"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "8.15.14",
     "clsx": "2.1.1",
-    "next": "^14.2.32",
+    "next": "14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "three": "0.149.0",
